# llm-finance-ai-assistant

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py
config/: config.yaml  logging.yaml
data/raw/: stock_prices.csv  user_transactions.csv
docs/: architecture.md  design_decisions.md
scripts/: deploy.py  evaluate.py  feature_engineering.py  infer.py  ingest_data.py  train_forecast.py  train_llm.py
src/data/: ingestion.py  preprocess.py
src/features/: feature_engineering.py
src/models/: evaluate_models.py  forecasting  llm  train_forecast_model.py
