[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_ai_assistant"
version = "0.1.0"
description = "A Financial Assistant Project with LLM and Forecasting"
authors = [
  { name="Your Name", email="your_email@example.com" }
]
dependencies = [
  # Core
  "numpy>=1.20.0",
  "pandas>=1.2.0",
  "scikit-learn>=1.0.0",
  # Time-Series / Forecasting
  "statsmodels>=0.12.0",
  "prophet; python_version>='3.7'",
  # LLM & NLP
  "transformers>=4.0.0",
  "torch>=1.8.0",
  # Data Ingestion / APIs (requests, etc.)
  "requests>=2.25.1",
  # Add more: e.g., mlflow, airflow, dvc, etc.
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "6.0"
addopts = "--disable-warnings"

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
strict = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
